testdata/baselines/reference/submodule/compiler/returnTypePredicateIsInstantiateInContextOfTarget.errors.txt
returnTypePredicateIsInstantiateInContextOfTarget.tsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== returnTypePredicateIsInstantiateInContextOfTarget.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    class TestComponent extends React.Component<{ isAny: <T>(obj: any) => obj is T }> {
        static defaultProps = {
            isAny: TestComponent.isAny
        }
    
        // Type guard is defined as a static class property
        static isAny<T>(obj: any): obj is T {
            return true;
        }
    }
    
    const TestRender = () => <TestComponent />;